# trending-historical-cryptocurrency-news

./: LICENSE  README.md
asp.net-sdk/: Default.aspx  Default.aspx.cs  README.md  Web.config
asp.net-sdk/App_Code/: Class.cs  Config.xml
c#-sdk/: CSharpExample.sln  README.md
c#-sdk/CSharpExample/: ApiAccess.cs  CSharpExample.csproj  Config.cs  Program.cs
c++-sdk/linux/cpp_app/: CMakeLists.txt  README.md
c++-sdk/linux/cpp_app/src/: ApiAccess.cpp  ApiAccess.h  main.cpp
c++-sdk/windows/: README.md
c++-sdk/windows/cpp_app/: CMakeLists.txt  README.md  notes.txt
c++-sdk/windows/cpp_app/src/: ApiAccess.cpp  ApiAccess.h  main.cpp
c-sdk/: Makefile  README.md  base64.c  class.c  hmac.c  script.c
c-sdk/include/: base64.h  class.h  config.h  hmac.h
examples/: request-trending-news.php  trending-news-sources.php  trending-news-watchlist.php
golang-sdk/: README.md
golang-sdk/examples/: config.go  main.go
golang-sdk/src/: class.go
java/: README.md  pom.xml
java-sdk/: pom.xml
kotlin-sdk/: README.md  build.gradle  settings.gradle
node-sdk/: README.md
php-sdk/: README.md
php-sdk/examples/: request-trending-news.php  trending-news-source-impact.php  trending-news-sources.php  trending-news-statistics.php  trending-news-watchlist.php
python-sdk/: README.md  config.py
python-sdk/src/: Class.py
r-sdk/: DESCRIPTION  NAMESPACE  README.md
ruby-sdk/: README.md  class.rb  config.rb  script.rb
swift-sdk/: Podfile  README.md
tests/: poll-trending-statistics.html
vb.net-sdk/: API-VBNET.vbproj  Class1.vb  Config.xml  Module1.vb  README.md
(+54 files in other folders)
